--- a/gallery.css
+++ b/gallery.css
@@ -1,4 +1,5 @@
+body {background-color: #000;}
 #container {margin: 0 auto; /*width: 900px;*/}
 #canvasWrapper {border: 1px solid;text-align: center;margin: 0 auto;}
-.flecha {display: inline-block; width: 40px; height: 600px; border: 1px solid;}
+.flecha {display: inline-block; width: 40px; height: 600px; border: 1px solid #fff;}
 #gallery {background-color: #000;}
